# cinnabar

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_EN.md  build.rs  config.toml.example  setup_models.sh  test_punctuation.sh
docs/: AGENTS.md  CONTRIBUTING.md  DEBUGGING_LOG.md  GUI_MODE_DESIGN.md  IMPROVEMENTS_LOG.md  INSTALL.md  PERFORMANCE.md  PUNCTUATION_ANALYSIS.md  README.md  ROADMAP.md  TEXT_INJECTION_USAGE.md  TROUBLESHOOTING.md
src/: config.rs  injector.rs  main.rs  recognizer.rs  resampler.rs  vad.rs  wayland.rs
src/ffi/: mod.rs
src/gui/: hotkey.rs  mod.rs  state.rs  window.rs
