[package]
name = "cinnabar"
version = "1.0.0"
edition = "2021"
authors = ["Cinnabar Team"]
description = "Lightweight, offline-first, streaming speech-to-text input tool for Linux"
license = "MIT"

[dependencies]
cpal = "0.15"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sherpa-rs-sys = "0.6"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true
