[package]
name = "cinnabar"
version = "1.2.1"
edition = "2021"
authors = ["Cinnabar Team"]
description = "Lightweight, offline-first, streaming speech-to-text input tool for Linux"
license = "MIT"

[dependencies]
cpal = "0.15"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sherpa-rs-sys = "0.6"
crossbeam-channel = "0.5"
ctrlc = "3.4"
arboard = "3.4"
evdev = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# GUI 模式依赖
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["wayland", "glow"] }
global-hotkey = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true
